<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:text="@string/survey_list_quantity_label" />

    <TextView
        android:id="@+id/tvCulture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/survey_list_culture_label" />

    <TextView
        android:id="@+id/tvExpertise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvQuantity"
        android:layout_alignStart="@+id/tvQuantity"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/survey_list_expertise_label" />

    <TextView
        android:id="@+id/tvAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_alignStart="@+id/tvCulture"
        android:layout_alignTop="@+id/tvExpertise"
        android:text="@string/survey_list_average_label" />
</RelativeLayout>